Fix clipping issue with margin-bottom

--- a/src/styles/components/Project.css
+++ b/src/styles/components/Project.css
@@ -14,7 +14,7 @@
   font-family: 'Cutive Mono', monospace;
   font-weight: 300;
   font-size: 50px;
-  margin-top: 100px;
+  margin-top: 0;
   margin-bottom: 0;
 }
 
@@ -30,7 +30,7 @@
 
 .project-primary-enter {
   opacity: 100%;
-  height: 100px;
+  height: 200px;
   -webkit-transition: all 0.65s ease-in-out;
   -moz-transition: all 0.65s ease-in-out;
   -o-transition: all 0.65s ease-in-out;
@@ -60,5 +60,5 @@
   line-height: 1.5;
   font-weight: 600;
   font-size: 24px;
-  margin-bottom: -100px;
+  margin-bottom: 0;
 }
