--- a/src/styles/components/ProjectDetailsList.css
+++ b/src/styles/components/ProjectDetailsList.css
@@ -8,7 +8,7 @@
   float: right;
   bottom: 0;
   right: 0;
-  margin-bottom: -100px;
+  margin-bottom: 0;
 }
 
 .details-circle {
